objects/INF_Case_Application__c.object
<CustomObject>
    <label>Case Application</label>
    <nameField>
        <displayFormat>CA-{000000000}</displayFormat>
        <label>Case Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Applications</relationshipLabel>
        <relationshipName>Case_Applications</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <referenceTo>INF_Application__c</referenceTo>
        <relationshipLabel>Case Applications</relationshipLabel>
        <relationshipName>Case_Applications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>INF_Business_Line__c</fullName>
        <formula>TEXT(Application__r.INF_BL__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INF_Application_Name__c</fullName>
        <formula>Application__r.Name</formula>
        <label>Application Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INF_Application_Product_Line__c</fullName>
        <formula>TEXT( Application__r.INF_Product_Line__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Product Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INF_Application_Product_Group__c</fullName>
        <formula>TEXT( Application__r.INF_Product_Group__c )</formula>
        <label>Application Product Group</label>
        <type>Text</type>
    </fields>
</CustomObject>